participant email sending implemented; next -> save statuses + tuning PDF file; than prepare heroku version

--- a/passes-management/.application/utils/mailer/template.html
+++ b/passes-management/.application/utils/mailer/template.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>{{emailTitle}}</title>
+    <meta charset="UTF-8">
+    <title>OTW 2016 Ticket Number: {{ticketNumber}}</title>
 </head>
 <body>
 
-<h1>Dear {{name}} {{surname}}</h1>
+<h1>Ticket: {{ticketNumber}}</h1>
+
+<h2>Hello {{name}} {{surname}},</h2>
 
 <p>
-  Please find your OTW 2016 ticket attached to the Email.
+    This is your E-ticket for: 5th Latvian Sensual Dance Festival &quot;On The Wave 2016&quot;
 </p>
+
 <p>
-  If you have any questions, feel free to contact us.
+    This E-ticket allows you entrance to the event, so please make sure you have either:<br/>
+    a printed copy with you OR<br/>
+    saved PDF file on your mobile device<br/>
+    when you come to the event registration desk.
+</p>
+
+<p>
+    Please don&apos;t share this E-ticket with anyone, as the E-ticket could be used only once and it&apos;s your
+    obligation to keep it safe!
 </p>
 <br/>
+
 <p>
-  Sincerely yours,<br/>
-  OTW team
+    Sincerely yours,<br/>
+    5th Latvian Sensual Dance festival &quot;On The Wave 2016&quot; team<br/>
+    <a href="http://bachatakizomba.com">bachatakizomba.com</a><br/>
+    <a href="http://bachatakizomba.com/contacts.html">Contacts</a>
 </p>
 
 </body>
